syntax = "proto3";

option java_package = "org.example.productsservice.grpc";
option java_multiple_files = true;
option java_outer_classname = "ProductProto";

message ProductRequest {
  int64 productId = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int32 stock = 4;
  float price = 5;
}

service ProductService {
  rpc getProduct(ProductRequest) returns (ProductResponse);
}